--- a/alt_style/new.css
+++ b/alt_style/new.css
@@ -8,7 +8,6 @@ h2 {
 }
 
 #wrap {
-/*	background: white;*/
 	padding-top: 20px;
 }
 
@@ -17,11 +16,7 @@ h2 {
 }
 
 #header, #footer, #content {
-	max-width: 802px;
-}
-
-.sidebar-left #region-content, .sidebar-right #region-content {
-	margin-left: 205px;
+	width: 802px;
 }
 
 #widget-logo h1 span {
