--- a/alt_style/new.css
+++ b/alt_style/new.css
@@ -32,10 +32,20 @@ h2 {
 	left: -35px;
 }
 
+.longman #widget-logo h1 {
+	background-image: url('longmanslogo.png');
+	height: 540px;
+	top: -140px;
+}
+
 #widget-logo a {
 	position: relative;
 	display: block;
 	height: 70px;
 	margin-top: 30px;
 	margin-bottom: 70px;
+}
+
+.longman #widget-logo a {
+	height: 350px;
 }
