--- a/alt_style/style.css
+++ b/alt_style/style.css
@@ -29,6 +29,8 @@ h2 {
 	border-bottom: 1px solid #ccc;
 	padding-bottom: 3px;
 	padding-left: 3px;
+	margin-top: 0;
+	font-size: 2em;
 }
 
 #wrap {
@@ -180,12 +182,12 @@ label {
 
 
 /* Style för nya forumet */
-#forum-topics, #forum-categories {
+#forum-topics, #forum-categories, #messages {
 	border: hidden;
 	border-collapse: collapse;
 }
 
-#forum-topics td, #forum-categories td {
+#forum-topics td, #forum-categories td, #messages td {
 	padding: 9px;
 	padding-top: 10px;
 	border: 1px solid #C9C2C1;
@@ -195,11 +197,11 @@ thead {
 	line-height: 19px;
 }
 
-#forum-topics td.topic-subject {
+#forum-topics td.topic-subject, #messages td.message-counterpart, #forum-categories td.category-title {
 	padding-left: 22px;
 }
 
-.topic-subject {
+.topic-subject, .message-counterpart {
 	background: transparent url('icons/comments.png') no-repeat center left;
 }
 
@@ -211,54 +213,29 @@ thead {
 	float: right;
 }
 
-.no-replies .topic-subject {
-	background-image: url('icons/comment.png');
-}
+.no-replies .topic-subject { background-image: url('icons/comment.png'); }
 
 .locked .topic-subject {
 	background-image: url('icons/lock.png');
 	color: #555;
 }
 
-.sticky .topic-subject {
-	background-image: url('icons/error.png');
-}
-
-.new .topic-subject {
-	background-image: url('icons/comments_add.png');
-}
-
-.new.no-replies .topic-subject {
-	background-image: url('icons/comment_add.png');
-}
-
-.sticky.new .topic-subject {
-	background-image: url('icons/error_add.png');
-}
-
-.is_event .topic-subject {
-	background-image: url('icons/date.png');
-}
-
-.is_event.new .topic-subject {
-	background-image: url('icons/date_add.png');
-}
+.sticky .topic-subject { background-image: url('icons/error.png'); }
+.new .topic-subject { background-image: url('icons/comments_add.png'); }
+.new.no-replies .topic-subject { background-image: url('icons/comment_add.png'); }
+.sticky.new .topic-subject { background-image: url('icons/error_add.png'); }
+.is_event .topic-subject { background-image: url('icons/date.png'); }
+.is_event.new .topic-subject { background-image: url('icons/date_add.png'); }
 
 .topic-replies, .category-threads {
 	text-align: center;
-}
-
-#forum-categories td.category-title {
-	padding-left: 22px;
 }
 
 .category-title {
 	background: transparent url('icons/folder.png') no-repeat center left;
 }
 
-.new .category-title {
-	background-image: url('icons/folder_add.png');
-}
+.new .category-title { background-image: url('icons/folder_add.png'); }
 
 .category-title span {
 	font-weight: normal;
@@ -269,6 +246,8 @@ thead {
 	white-space: nowrap;
 }
 
+.message-counterpart { background-image: url('icons/email_open.png'); }
+.unread .message-counterpart { background-image: url('icons/email.png'); }
 
 .post {
 	margin-bottom: 20px;
@@ -320,7 +299,7 @@ ul.flat {
 
 .widget h3 {
 	color: black;
-	border-bottom: 3px solid rgb(158, 121, 55);
+	border-bottom: 1px solid rgb(204, 204, 204);
 	padding: 3px;
 	padding-top: 0;
 	margin-top: 0;
@@ -433,45 +412,16 @@ ul.flat {
 	opacity: 1;
 }
 
-.action-edit {
-	background-image: url('icons/pencil.png');
-}
-
-.action-delete {
-	background-image: url('icons/bin.png');
-}
-
-.action-alert {
-	background-image: url('icons/transmit.png');
-}
-
-.action-deleteimage {
-	background-image: url('icons/image_delete.png');
-}
-
-.action-makenews {
-	background-image: url('icons/newspaper_add.png');
-}
-
-.action-unmakenews {
-	background-image: url('icons/newspaper_delete.png');
-}
-
-.action-guestbook {
-	background-image: url('icons/book.png');
-}
-
-.action-guestbook:hover {
-	background-image: url('icons/book_edit.png');
-}
-
-.action-images {
-	background-image: url('icons/images.png');
-}
-
-.action-message {
-	background-image: url('icons/email.png');
-}
+.action-edit { background-image: url('icons/pencil.png'); }
+.action-delete { background-image: url('icons/bin.png'); }
+.action-alert { background-image: url('icons/transmit.png'); }
+.action-deleteimage { background-image: url('icons/image_delete.png'); }
+.action-makenews { background-image: url('icons/newspaper_add.png'); }
+.action-unmakenews { background-image: url('icons/newspaper_delete.png'); }
+.action-guestbook { background-image: url('icons/book.png'); }
+.action-guestbook:hover { background-image: url('icons/book_edit.png'); }
+.action-images { background-image: url('icons/images.png'); }
+.action-message { background-image: url('icons/email.png'); }
 
 .action-message:hover {
 	background-image: url('icons/email_edit.png');
@@ -484,29 +434,12 @@ ul.flat {
 	top: 1px;
 }
 
-.action-presentation {
-	background-image: url('icons/user.png');
-}
-
-.action-thoughts {
-	background-image: url('icons/lightbulb.png');
-}
-
-.action-usersettings {
-	background-image: url('icons/user_edit.png');
-}
-
-.action-image {
-	background-image: url('icons/image_edit.png');
-}
-
-.action-admin {
-	background-image: url('icons/cog.png');
-}
-
-.action-reply {
-	background-image: url('icons/book_add.png');	
-}
+.action-presentation { background-image: url('icons/user.png'); }
+.action-thoughts { background-image: url('icons/lightbulb.png'); }
+.action-usersettings { background-image: url('icons/user_edit.png'); }
+.action-image { background-image: url('icons/image_edit.png'); }
+.action-admin { background-image: url('icons/cog.png'); }
+.action-reply { background-image: url('icons/book_add.png'); }
 
 
 /* Usermenu, menyn till vänster */
@@ -526,113 +459,31 @@ ul.flat {
 	text-decoration: none;
 }
 
-.usermenu .home {
-	background-image: url('icons/house.png');
-}
-
-.usermenu .guestbook {
-	background-image: url('icons/book_open.png');
-}
-
-.usermenu .guestbook.new {
-	background-image: url('icons/book_open.png');
-}
-
-.usermenu .messages {
-	background-image: url('icons/email.png');
-}
-
-.usermenu .messages.new {
-	background-image: url('icons/email_open.png');
-}
-
-.usermenu .thoughts {
-	background-image: url('icons/page_white_edit.png');
-}
-
-.usermenu .events {
-	background-image: url('icons/calendar.png');
-}
-
-.usermenu .forum {
-	background-image: url('icons/comments.png');
-}
-
-.usermenu .gallery {
-	background-image: url('icons/images.png');
-}
-
-.usermenu .people {
-	background-image: url('icons/group.png');
-}
-
-.usermenu .events.new {
-	background-image: url('icons/calendar_add.png');
-}
-
-.usermenu .settings {
-	background-image: url('icons/wrench.png');
-}
-
-.usermenu .logout {
-	background-image: url('icons/door_open.png');
-}
-
-.usermenu .wisdom {
-	background-image: url('icons/lightbulb.png');
-}
-
-.usermenu .fadder {
-	background-image: url('icons/user_add.png');
-}
-
-.usermenu .fadderbarn {
-	background-image: url('icons/group.png');
-}
-
-.usermenu .admin-settings {
-	background-image: url('icons/application_form_edit.png');
-}
-
-.usermenu .admin-permissions {
-	background-image: url('icons/lock.png');
-}
-
-.usermenu .admin-log {
-	background-image: url('icons/error.png');
-}
+.usermenu .home { background-image: url('icons/house.png'); }
+.usermenu .guestbook { background-image: url('icons/book_open.png'); }
+.usermenu .guestbook.new { background-image: url('icons/book_open.png'); }
+.usermenu .messages { background-image: url('icons/email.png'); }
+.usermenu .messages.new { background-image: url('icons/email_open.png'); }
+.usermenu .thoughts { background-image: url('icons/page_white_edit.png'); }
+.usermenu .events { background-image: url('icons/calendar.png'); }
+.usermenu .forum { background-image: url('icons/comments.png'); }
+.usermenu .gallery { background-image: url('icons/images.png'); }
+.usermenu .people { background-image: url('icons/group.png'); }
+.usermenu .events.new { background-image: url('icons/calendar_add.png'); }
+.usermenu .settings { background-image: url('icons/wrench.png'); }
+.usermenu .logout { background-image: url('icons/door_open.png'); }
+.usermenu .wisdom { background-image: url('icons/lightbulb.png'); }
+.usermenu .fadder { background-image: url('icons/user_add.png'); }
+.usermenu .fadderbarn { background-image: url('icons/group.png'); }
+.usermenu .admin-settings { background-image: url('icons/application_form_edit.png'); }
+.usermenu .admin-permissions { background-image: url('icons/lock.png'); }
+.usermenu .admin-log { background-image: url('icons/error.png'); }
+.usermenu .board { background-image: url('icons/information.png'); }
 
 /* Extramarginalen för att separera delar av menyn */
-.usermenu .settings, .usermenu .fadder, .usermenu .wisdom {
+.usermenu .settings, .usermenu .fadder, .usermenu .wisdom, .usermenu .board {
 	margin-top: 18px;
 }
-
-
-/* Gamla widget-kalendern, ska helst försvinna i ett helvetesgap och döden dö */
-.calendarHeader{background-color:#CCC}
-.calendarFooter{font-weight:700;font-size:12px;font-family:Arial, Verdana, 'Courier New';background-color:#fc6;text-align:center}
-.calendarBottom{background-color:#fc6}
-.calendarDayName{font-weight:700;font-size:9px;font-family:Verdana, Arial, 'Courier New';background-color:#fc6;text-align:center}
-.calendarDates{font-size:8px;color:#000;font-family:Verdana, Arial}
-.calendarDateBox{border-right:gray 1px solid;border-top:gray 1px solid;border-left:gray 1px solid;color:#000;border-bottom:gray 1px solid;text-align:center;margin:2px}
-.calendarDateBoxFilled{border-right:#ccc 1px solid;border-top:#ccc 1px solid;border-left:#ccc 1px solid;color:#000;border-bottom:#ccc 1px solid;background-color:#fc6;text-align:center;margin:2px}
-.calendarDateBoxFilledToday{border-right:#f66 2px solid;border-top:#f66 2px solid;border-left:#f66 2px solid;color:#000;border-bottom:#f66 2px solid;background-color:#f66;text-align:center}
-.calendarDateBoxToday{border-right:#f66 2px solid;border-top:#f66 2px solid;border-left:#f66 2px solid;color:#000;border-bottom:#f66 2px solid;text-align:center}
-.calendarDateBoxFilledActive{border-right:#393 2px solid;border-top:#393 2px solid;border-left:#393 2px solid;color:#000;border-bottom:#393 2px solid;background-color:#fc6;text-align:center}
-.calendarDateBoxActive{border-right:#393 2px solid;border-top:#393 2px solid;border-left:#393 2px solid;color:#000;border-bottom:#393 2px solid;text-align:center}
-tr.calendarViewHeader{font-weight:700;font-size:10px;color:#FFF;font-family:Arial, Verdana;background-color:#c96}
-.calendarView{border-right:#000 1px solid;border-top:#000 1px solid;border-left:#000 1px solid;border-bottom:#000 1px solid}
-.calendarViewContentLeft{border-right:#000 1px solid;border-left:#000 1px solid;text-align:left;padding:3px}
-.calendarViewContentRight{border-right:#000 1px solid;padding-right:3px;padding-bottom:3px;padding-top:3px;text-align:right}
-.calendarViewBottomLeft{margin-bottom:10px;border-left:#000 1px solid;border-bottom:#000 1px solid;padding:3px}
-.calendarViewBottomRight{border-right:#000 1px solid;padding-right:3px;margin-bottom:10px;padding-bottom:3px;padding-top:3px;border-bottom:#000 1px solid;text-align:right}
-.calendarViewTopRight{border-right:#000 1px solid;padding-right:3px;border-top:#000 1px solid;font-size:10px;width:150px;color:#fff;font-family:Verdana, Arial;text-align:right}
-.calendarViewTopLeft{border-top:#000 1px solid;padding-left:3px;font-weight:700;font-size:11px;border-left:#000 1px solid;color:#fff;font-family:Verdana, Arial}
-.calendarImage{border-right:#000 1px solid;border-top:#000 1px solid;float:left;border-left:#000 1px solid;border-bottom:#000 1px solid;text-align:right}
-.calendarImageText{float:right;text-align:left}
-.calendarReduceMonth,.calendarIncreaseMonth{width:20px;position:static;background-color:#fc6;text-align:center}
-.calendarMarkEvent,.calendarMarkEventToday{font-weight:700;font-size:8px;color:#000}
-
 
 /* Gamla alt_style-css'en, lär inte behövas när den gamla markupen är borta, tack och lov */
 .userList,.redAngry,span.galleryThumb,td.galleryThumb,td.presentationPhoto,.inputbox{background:transparent}
@@ -857,4 +708,15 @@ textarea#form-item-body, .form-item-textarea {
 
 .user-properties dd {
 	clear: right;
+}
+
+/* Styrelse-sidan */
+.board_index .member .userimage {
+	float: left;
+	margin-right: 10px;
+	margin-bottom: 10px;
+}
+
+.board_index .member {
+	clear: both;
 }
