--- a/alt_style/style.css
+++ b/alt_style/style.css
@@ -595,6 +595,32 @@ textarea#form-item-body, .form-item-textarea {
 #widget-timeline .item-user { background-image: url('icons/user.png'); }
 #widget-timeline .item-image { background-image: url('icons/image.png'); }
 
+#widget-new_timeline {
+	clear: both;
+	padding-top: 10px;
+}
+
+#widget-new_timeline li {
+	padding-left: 22px;
+	background: transparent url('icons/bullet_black.png') no-repeat center left;
+	margin-bottom: 5px;
+}
+
+#widget-new_timeline a span {
+	display: block;
+	color: #666;
+	font-weight: normal;
+}
+
+#widget-new_timeline .item-thought { background-image: url('icons/lightbulb.png'); }
+#widget-new_timeline .item-forum { background-image: url('icons/comment.png'); }
+#widget-new_timeline .item-forum_reply { background-image: url('icons/comment.png'); }
+#widget-new_timeline .item-event { background-image: url('icons/date.png'); }
+#widget-new_timeline .item-event_reply { background-image: url('icons/date.png'); }
+#widget-new_timeline .item-event_new { background-image: url('icons/date_add.png'); }
+#widget-new_timeline .item-user { background-image: url('icons/user.png'); }
+#widget-new_timeline .item-image { background-image: url('icons/image.png'); }
+
 /* Kalendern */
 .day {
 	border: 1px solid #C9C2C1;
@@ -792,6 +818,10 @@ a.thumbnail {
 .page-welcome {
 	background: #1A0601;
 	text-align: center;
+}
+
+.page-welcome a img, .page-welcome a {
+	border: none;
 }
 
 /* Sysslar-med-checkboxarna */
