--- a/alt_style/style.css
+++ b/alt_style/style.css
@@ -1,9 +1,17 @@
 body {
-	background: white;
+	background: #ccc;
 	margin: 0;
 	padding: 0;
 	font-size: 10px;	
 	font-family: Lucida grande, Verdana, Arial, sans-serif;
+}
+
+#upper-wrap {
+	background: white url('background-fade-white.jpg') no-repeat center top;
+	margin: 0;
+	padding: 0;
+	padding-top: 40px;
+	border-bottom: 1px solid #bbb;
 }
 
 a {
@@ -33,12 +41,7 @@ h2 {
 	font-size: 2em;
 }
 
-#wrap {
-	background: transparent url('background-fade-white.jpg') no-repeat center top;
-	margin: 0;
-	padding: 0;
-	padding-top: 40px;
-}
+#wrap {}
 
 #region-header, #region-footer, #content {
 	width: 732px;
@@ -126,12 +129,19 @@ h2 {
 }
 
 #region-footer {
-	color: #333;
+	color: #555;
 	margin-top: 10px;
 }
 
 #region-footer a {
-	color: #555;
+/*	color: #999;*/
+}
+
+#region-footer .widget {
+	float: left;
+	width: 25%;
+	text-align: center;
+	padding-bottom: 10px;
 }
 
 #footer-text {
