--- a/alt_style/style.css
+++ b/alt_style/style.css
@@ -2,7 +2,7 @@ body {
 	background: #ccc;
 	margin: 0;
 	padding: 0;
-	font-size: 10px;	
+	font-size: 10px;
 	font-family: Lucida grande, Verdana, Arial, sans-serif;
 }
 
@@ -10,7 +10,7 @@ body {
 	background: white url('background-fade-white.jpg') no-repeat center top;
 	margin: 0;
 	padding: 0;
-	padding-top: 40px;
+/*	padding-top: 40px;*/
 	border-bottom: 1px solid #bbb;
 }
 
@@ -43,7 +43,7 @@ h2 {
 
 #wrap {}
 
-#region-header, #region-footer, #content {
+#region-footer, #content {
 	width: 732px;
 	margin: 0 auto;
 	text-align: left;
@@ -51,6 +51,11 @@ h2 {
 
 #header-wrap, #footer-wrap {
 	text-align: center;
+}
+
+#region-header .widget {
+	margin: 0 auto;
+	text-align: left;
 }
 
 #content-wrap {
@@ -71,7 +76,11 @@ h2 {
 	width: 130px;
 }
 
-.sidebar-left #region-content, .sidebar-right #region-content {
+.sidebar-left #right-columns, .two-sidebars #right-columns {
+	margin-left: 205px;
+}
+
+.sidebar-left #region-content, .sidebar-right #region-content, .sidebar-left #region-highlight, .sidebar-right #region-highlight, .two-sidebars #region-highlight {
 	float: right;
 	width: 597px;
 }
@@ -92,28 +101,58 @@ h2 {
 }
 
 #navbar {
-	margin-bottom: 10px;
-	opacity: 0.8;
-	background: #9E7937;
-	padding: 5px;
+	margin-bottom: 20px;
+/*	opacity: 0.8;*/
+	background: #EAB652;
+	border-bottom: 1px solid #D3AF3F;
+}
+
+#navbar .inner {
+	width: 802px;
+	margin: 0px auto;
 }
 
 #navbar a {
-	font-family: Verdana;
-	color: #fff;
+/*	font-family: Verdana; */	
+	color: #614C22;
+	font-weight: bold;
+	padding: 10px;
+	font-size: 16px;
+	display: block;
+	float: left;
+}
+
+#navbar a span {
 	font-weight: normal;
-	padding: 0 10px;
-	font-size: 12px;
+	display: block;
+	font-size: 10px;
+	color: #947433;
+}
+
+#navbar a:hover, #navbar a.selected {
+	background: #D3AF3F;
+	text-decoration: none;
 }
 
 
 #menuItems {
 	float: left;
+	margin-left: 205px;
 }
 
 #widget-topmenu #quicksearch {
 	float: right;
-	margin-bottom: 0;
+	margin-top: 10px;
+}
+
+#widget-topmenu #quicksearch label {
+	color: #614C22;
+	font-size: 16px;
+	font-weight: bold;
+}
+
+#widget-topmenu #quicksearch .form-item-text {
+	width: auto;
 }
 
 .clear {
@@ -316,9 +355,9 @@ h3 .right a {
 	font-size: 0.9em;
 }
 
-a.current {
+a.current, .pager strong {
 	background: rgb(122, 80, 14);
-	color: white;
+	color: #fcfcfc;
 	padding: 1px 3px;
 	-moz-border-radius: 5px; 
 	-webkit-border-radius: 5px;
@@ -622,7 +661,7 @@ textarea#form-item-body, .form-item-textarea {
 
 #widget-new_timeline {
 	clear: both;
-	padding-top: 10px;
+/*	padding-top: 10px;*/
 }
 
 #widget-new_timeline li {
@@ -814,6 +853,10 @@ a.thumbnail {
 	margin-left: 77px;
 }
 
+#quicklinks {
+	margin-bottom: 20px;
+}
+
 /* Snabbsöken */
 #widget-quicksearch .form-item-text, #widget-quicksearch .form-item-submit {
 	width: 65%;
@@ -854,4 +897,22 @@ a.thumbnail {
 	width: 25%;
 	float: left;
 	clear: none;
+}
+
+/* frontintro-widgeten */
+#widget-frontintro {
+	position: relative;
+}
+
+#widget-frontintro div {
+	position: absolute;
+	bottom: 0;
+	color: white;
+	padding: 10px;
+	margin: 10px;
+	background-image: url('black_op50.png');
+}
+
+#widget-frontintro div p {
+	margin: 0;
 }
