--- a/alt_style/style.css
+++ b/alt_style/style.css
@@ -44,7 +44,7 @@ h2 {
 #wrap {}
 
 #region-footer, #content {
-	width: 732px;
+	width: 802px;
 	margin: 0 auto;
 	text-align: left;
 }
@@ -64,11 +64,16 @@ h2 {
 
 #region-left {
 	float: left;
-	width: 135px;
+	width: 205px;
 }
 
 #region-left .widget {
 	margin-right: 10px;
+}
+
+#region-content, #region-right {
+	position: relative;
+	z-index: 2;
 }
 
 #region-right {
@@ -348,10 +353,6 @@ h3.widget-title {
 
 h3 .right {
 	float: right;
-}
-
-h3 .right a {
-/*	font-weight: normal;*/
 	font-size: 0.9em;
 }
 
@@ -872,16 +873,6 @@ a.thumbnail {
 	padding: 2px 10px;
 }
 
-/* moonfia's giraff */
-.page-user-view-2984 #region-content {
-	background: transparent url('/images/giraff.gif') no-repeat top right;
-}
-
-/* footfall's vattenpipa */
-.page-user-view-2959 #region-content {
-	background: transparent url('/images/vattenpipa.gif') no-repeat top right;
-}
-
 /* Intro-sidan */
 .page-welcome {
 	background: #1A0601;
@@ -915,4 +906,50 @@ a.thumbnail {
 
 #widget-frontintro div p {
 	margin: 0;
+}
+
+/* Logo-widgeten */
+#widget-logo h1 span {
+	display: none;
+}
+
+#widget-logo h1 {
+	background: transparent url('new_logo_shadow.png') no-repeat center center;
+	width: 290px;
+	height: 278px;
+	position: absolute;
+	top: -165px;
+	left: -70px;
+	z-index: 1;
+}
+
+#widget-logo a {
+	position: relative;
+	display: block;
+	height: 70px;
+	margin-top: 30px;
+	margin-bottom: 35px;
+}
+
+/* Extragrejer, måste ligga sist! */
+
+/* moonfia's giraff */
+.page-user-view-2984 #region-content {
+	background: transparent url('/images/giraff.gif') no-repeat top right;
+}
+
+/* footfall's vattenpipa */
+.page-user-view-2959 #region-content {
+	background: transparent url('/images/vattenpipa.gif') no-repeat top right;
+}
+
+/* Longmans egna logga */
+.longman #widget-logo h1 {
+	background-image: url('longmanslogo.png');
+	height: 540px;
+	top: -140px;
+}
+
+.longman #widget-logo a {
+	height: 350px;
 }
