--- a/alt_style/style.css
+++ b/alt_style/style.css
@@ -326,6 +326,10 @@ thead {
 	padding-left: 10px;
 }
 
+a.user.online {
+	padding-left: 16px;
+	background: transparent url('icons/bullet_green.png') no-repeat center left;
+}
 
 /* Ofta återkommande element */
 
@@ -425,7 +429,7 @@ span.userimage {
 	background-position: center center;
 }
 
-.online {
+span.online {
 	color: green;
 	font-weight: bold;
 }
@@ -931,6 +935,16 @@ a.thumbnail {
 	height: 70px;
 	margin-top: 30px;
 	margin-bottom: 35px;
+}
+
+/* Userfavorites-widgeten */
+#widget-userfavorites a.delete {
+	color: #999;
+}
+
+#widget-userfavorites a.delete:hover {
+	color: red;
+	text-decoration: none;
 }
 
 /* Extragrejer, måste ligga sist! */
